--- a/coltermay.com/sass/_base.scss
+++ b/coltermay.com/sass/_base.scss
@@ -26,10 +26,13 @@ body {
 // UTILITY CLASS
 .mg-lb-lg {margin: 0 0 50px 77px;}
 .mg-bottom-lg {margin-bottom: 90px;}
+.mg-bottom-sm {margin-bottom: 15px;}
 .mg-top-lg {margin-top: 80px;}
 .align-right {text-align: right;}
 .li-dots-right {direction: rtl; unicode-bidi: embed;}
+
 .grey {color: $color-grey-light;}
+.black {color:$color-black;}
 
 
 
