--- a/coltermay.com/sass/_typography.scss
+++ b/coltermay.com/sass/_typography.scss
@@ -15,7 +15,7 @@
         top: 48%;
         left: 2.4%;
         font-size: 1.1em;
-        color: $color-grey-dark;
+        color: $color-grey-darker;
         pointer-events: none;
 
     }
