--- a/coltermay.com/sass/_variables.scss
+++ b/coltermay.com/sass/_variables.scss
@@ -3,6 +3,8 @@ $color-primary-light: #ecd99f;
 $color-white: #fff;
 $color-grey-light: #a6a6a6;
 $color-grey-dark: #5b5b5b;
+$color-grey-darker: #333333;
+
 $color-black-bg: rgba(14, 4, 4, 0.699);
 $color-black: #000000;
 
