--- a/coltermay.com/sass/_contact.scss
+++ b/coltermay.com/sass/_contact.scss
@@ -1,3 +1,66 @@
-.section__contact {
-    background-color: $color-black;
-}
+// .section__contact {
+
+ 
+// }
+
+
+// .row {
+//     position: relative;
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     min-height: 100vh;
+//     background: #095a55;
+
+//     &::before {
+//         content: '';
+//         position: absolute;
+//         top: 0;
+//         left: 0;
+//         width: 50%;
+//         height: 100%;
+//         background: #fff38a;
+//     }
+
+// }
+
+// .contact {
+//     position: relative;
+//     min-width: 1100px;
+//     min-height: 550px;
+//     display: flex;
+//     z-index: 1000;
+//     background: $color-white;
+
+//     &__form {
+//         position: relative;
+//         // padding: 70px 50px;
+//         // padding-left: 250px;
+//         // margin-left: 150px;
+//         // width: calc(100%- 150px);
+//         // height: 100%;
+//         background-color: $color-white;
+//         // box-shadow: 0 50px 50px rgba(0, 0, 0,0.25);
+
+//     }
+//     // &__info {
+//     //     position: absolute;
+//     //     top: 40px;
+//     //     width: 350px;
+//     //     height: calc(100% - 80px);
+//     //     background-color: #095a55;
+//     //     z-index: 1;
+//     //     padding: 40px;
+//     //     display: flex;
+//     //     justify-content: center;
+//     //     flex-direction: column;
+//     //     justify-content: space-between;
+//     //     box-shadow: 0 20px 25px rgba(0, 0, 0,0.15) 
+//     // }
+
+// }
+
+
+
+
+
