--- a/coltermay.com/sass/_navigation.scss
+++ b/coltermay.com/sass/_navigation.scss
@@ -5,11 +5,12 @@
     width: 100%;
     height: 80px;
     display: flex;
-    background-color: rgba(14, 4, 4, 0.788);
-    box-shadow: 0px 10px 40px -10px rgba(0,0,0,0.75);
+    @include navBg;
     overflow: hidden;
     justify-content: space-between;
     align-items: center;
+
+
 
     & .logo {
         position: relative;
@@ -83,33 +84,59 @@
     &:hover{
         color:$color-white;
     }
-}
+} 
 
-.scroll {
-    position: absolute;
-    top: 80%;
-    left: 94%;
-    transform: translate(0, 0) rotate(270deg);
+.sticky{
+    position: fixed;
+    background: $color-black-bg;
+   
+    animation-name: stick;
+    animation-duration: .4s;
+    animation-timing-function: ease;
+    transition: background-color 1000ms ease-out;
+    transition-delay: 125ms;
+   
+    z-index: 99;
 
-    & p {
-        font-weight: 300;
-        color: $color-primary;
-        text-transform: uppercase;
-        font-size: 13px;
-        letter-spacing: 7px;
-    }
-
-    &::after {
-        content:'';
-        position: absolute;
-        bottom: 40%;
-        left: -60%;
-        width: 40px;
-        height: 1px;
-        background-color: $color-primary;
-        // transform: translate(30px, 20px) rotate(177deg);
-    }
-
+ 
 
 }
+
+
+
+
+
+
+
+
+
+
+
+// .scroll {
+//     position: absolute;
+//     top: 80%;
+//     left: 94%;
+//     transform: translate(0, 0) rotate(270deg);
+
+//     & p {
+//         font-weight: 300;
+//         color: $color-primary;
+//         text-transform: uppercase;
+//         font-size: 13px;
+//         letter-spacing: 7px;
+//     }
+
+//     &::after {
+//         content:'';
+//         position: absolute;
+//         bottom: 40%;
+//         left: -60%;
+//         width: 40px;
+//         height: 1px;
+//         background-color: $color-primary;
+//         // transform: translate(30px, 20px) rotate(177deg);
+//     }
+
+
+// }
 
