--- a/coltermay.com/sass/_art.scss
+++ b/coltermay.com/sass/_art.scss
@@ -1,11 +1,11 @@
 .section__art {
-	padding-bottom: 20px;	
-	background: linear-gradient(to right,
-	$color-black 45%,
-	$color-black 45%,
-	$color-primary 20%,
-	$color-primary 50%);
-	// background-color: $color-primary-light;
+	// padding-bottom: 20px;	
+	// background: linear-gradient(to right,
+	// $color-black 45%,
+	// $color-black 45%,
+	// $color-primary 20%,
+	// $color-primary 50%);
+	background-color: $color-primary-light;
 
 }
 
